# mic

./: .gitignore  CONTRACT.md  Cargo.toml  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: build.yml  test-windows.yml
.omc/: project-memory.json
.omc/plans/: paridad-vb6-fase2.md
.omc/research/: inventario-vb6.md  paridad-vb6-huecos-restantes.md  qa-integral-2026-06-07.md  qa-recorrido.md  wiring-empacar-plantillas.md  wiring-exportar.md  wiring-ligados.md  wiring-reportes.md
.omc/sessions/: 6badf72f-abc1-4089-a8e4-82d70bc43709.json
.omc/state/: agent-replay-494a34de-c6a8-4e5d-bfad-d5068d44b599.jsonl  agent-replay-8dce656c-b252-4cdc-bee8-a0efcc29827b.jsonl  agent-replay-f990f354-c9e3-47ae-a157-47fe4ec8c81e.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-06-05T17-23-33-375Z.json  checkpoint-2026-06-05T17-25-50-639Z.json
crates/mic-core/: Cargo.toml
crates/mic-core/src/: error.rs  lib.rs  model.rs
crates/mic-core/src/calc/: eval.rs  expand.rs  functions.rs  lexer.rs  mod.rs
crates/mic-db/: Cargo.toml
crates/mic-db/examples/: demo.rs  seed.rs
crates/mic-db/src/: fts.rs  lib.rs  pool.rs  query_builder.rs  repo_campos.rs  repo_categorias.rs  repo_filtros.rs  repo_grupos.rs  repo_ligados.rs  repo_multidatos.rs  repo_registros.rs  repo_reportes.rs  schema.rs
crates/mic-db/tests/: integracion.rs
crates/mic-migrator/: Cargo.toml
crates/mic-migrator/src/: csv_parser.rs  diag.rs  jet.rs  lib.rs  mdbtools.rs  migrar.rs  paths.rs  type_map.rs
crates/mic-migrator/tests/: diff_mdbtools.rs  integracion.rs
crates/mic-migrator/tests/fixtures/: CrearMdbMic.java  album-mic-jet3.mdb  album-mic.mdb
crates/mic-tauri/: Cargo.toml  tauri.conf.json
crates/mic-tauri/capabilities/: default.json
crates/mic-tauri/icons/: icon.icns
crates/mic-tauri/resources/mdbtools/win-x86/: LICENSE-mdbtools.txt
crates/mic-tauri/src/: lib.rs  main.rs  state.rs
crates/mic-tauri/src/commands/: album.rs  campos.rs  exportar.rs  filtros.rs  grupos.rs  importar.rs  ligados.rs  migracion.rs  mod.rs  multidatos.rs  registros.rs  reportes.rs  thumbs.rs
crates/mic-tauri/tests/: migracion_jet.rs  migracion_mdbtools.rs
crates/mic-thumbs/: Cargo.toml
crates/mic-thumbs/src/: cache.rs  generator.rs  lib.rs
scripts/: crear-jet3.ps1
src/: App.svelte  app.css  main.ts
src/lib/: acciones.ts
src/lib/components/album/: AlbumSidebar.svelte  AlbumView.svelte  FiltersPanel.svelte  GroupTree.svelte  InspectorPanel.svelte
src/lib/components/dialogs/: AdvancedFiltersDialog.svelte  BatchUpdateDialog.svelte  CopyAlbumDialog.svelte  ExportDialog.svelte  FieldsVisibilityDialog.svelte  ImportarDialog.svelte  LinkedAlbumsDialog.svelte  MigrateDialog.svelte  NewAlbumWizard.svelte  PrintDialog.svelte  SearchDialog.svelte  SortDialog.svelte  TotalizeDialog.svelte  exportarIpc.ts  importarIpc.ts  ligadosIpc.ts
src/lib/components/editor/: CategoryManager.svelte  (+3 more)
src/lib/domain/: types.ts  validation.ts
src/lib/i18n/: es.ts
src/lib/ipc/: commands.ts  events.ts  thumbnails.ts
src/lib/stores/: albumState.svelte.ts  albums.svelte.ts  theme.svelte.ts  ui.svelte.ts  vista.svelte.ts
src/lib/utils/: capasEscape.ts  debounce.ts  format.ts  ventanas.ts
(+42 files in other folders)
