[workspace]
resolver = "2"
members = [
    "crates/mic-core",
    "crates/mic-db",
    "crates/mic-thumbs",
    "crates/mic-migrator",
    "crates/mic-tauri",
]

[workspace.package]
version = "3.0.6"
edition = "2021"
authors = ["MIC"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled", "functions", "backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "fs", "time"] }
image = "0.25"
fast_image_resize = "5"
encoding_rs = "0.8"
csv = "1"
tracing = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
