[package]
name = "mic-db"
version.workspace = true
edition.workspace = true

[dependencies]
mic-core = { path = "../mic-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
image = { workspace = true }
